--- a/ProjectFinal.html
+++ b/ProjectFinal.html
@@ -13213,6 +13213,26 @@ Reference:<a href="http://legacy.earlham.edu/~peters/fos/overview.htm">http://le
 
   
 
+  <div class="
+      cell border-box-sizing code_cell rendered">
+    <div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="ch">#!pip install sklearn</span>
+<span class="c1">#!pip install matplotlib</span>
+<span class="c1">#!pip install seaborn</span>
+<span class="c1">#!pip install xlrd</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+  </div>
+
+  
+
   <div class="nbinteract-hide_in
       cell border-box-sizing code_cell rendered">
     <div class="input">
@@ -13227,6 +13247,24 @@ Reference:<a href="http://legacy.earlham.edu/~peters/fos/overview.htm">http://le
 </pre></div>
 
     </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    
+
+
+<div class="output_html rendered_html output_subarea ">
+<script>jQuery(function() {if (jQuery("body.notebook_app").length == 0) { jQuery(".input_area").toggle(); jQuery(".prompt").toggle();}});</script>
+</div>
+
+</div>
+
 </div>
 </div>
 
@@ -13389,7 +13427,7 @@ health disease to some degree.</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa8ead8748&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ca5e7fe80&gt;</pre>
 </div>
 
 </div>
@@ -13433,8 +13471,8 @@ rate and Resting blood pressure to help understand their correlations to the hea
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># HIDDEN</span>
-<span class="n">nage</span> <span class="o">=</span> <span class="mi">41</span>
-<span class="n">ntrestbps</span> <span class="o">=</span> <span class="mi">49</span>
+<span class="n">nage</span> <span class="o">=</span> <span class="mi">56</span>
+<span class="n">ntrestbps</span> <span class="o">=</span> <span class="mi">50</span>
 <span class="n">hist2d</span><span class="p">,</span> <span class="n">age_edges</span><span class="p">,</span> <span class="n">trestbps_edges</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">histogram2d</span><span class="p">(</span><span class="n">heart</span><span class="p">[</span><span class="s1">&#39;age&#39;</span><span class="p">],</span> 
                                                    <span class="n">heart</span><span class="p">[</span><span class="s1">&#39;trestbps&#39;</span><span class="p">],</span> 
                                                    <span class="n">weights</span> <span class="o">=</span> <span class="n">heart</span><span class="p">[</span><span class="s1">&#39;exang&#39;</span><span class="p">],</span>
@@ -13469,10 +13507,10 @@ rate and Resting blood pressure to help understand their correlations to the hea
 <span class="n">c_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">ColorAxis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">col_sc</span><span class="p">,</span> 
                         <span class="n">orientation</span> <span class="o">=</span> <span class="s1">&#39;vertical&#39;</span><span class="p">,</span> 
                         <span class="n">side</span> <span class="o">=</span> <span class="s1">&#39;right&#39;</span><span class="p">)</span>
-<span class="n">x_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">Axis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">x_sc</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="s1">&#39;Serum cholestoral in mg/dl&#39;</span><span class="p">)</span>
+<span class="n">x_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">Axis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">x_sc</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="s1">&#39;Age&#39;</span><span class="p">)</span>
 <span class="n">y_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">Axis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">y_sc</span><span class="p">,</span> 
                    <span class="n">orientation</span> <span class="o">=</span> <span class="s1">&#39;vertical&#39;</span><span class="p">,</span> 
-                   <span class="n">label</span> <span class="o">=</span> <span class="s1">&#39;Age&#39;</span><span class="p">)</span>
+                   <span class="n">label</span> <span class="o">=</span> <span class="s1">&#39;Serum cholestoral in mg/dl&#39;</span><span class="p">)</span>
 
 <span class="n">heat_map</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">GridHeatMap</span><span class="p">(</span><span class="n">color</span> <span class="o">=</span> <span class="n">hist2d</span><span class="p">,</span>
                               <span class="n">row</span> <span class="o">=</span> <span class="n">age_edges</span><span class="p">,</span>
@@ -13480,8 +13518,8 @@ rate and Resting blood pressure to help understand their correlations to the hea
                               <span class="n">column</span> <span class="o">=</span> <span class="n">trestbps_edges</span><span class="p">,</span>
                               <span class="c1">#trestbps_centers,</span>
                               <span class="n">scales</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;color&#39;</span><span class="p">:</span> <span class="n">col_sc</span><span class="p">,</span>
-                                        <span class="s1">&#39;row&#39;</span><span class="p">:</span> <span class="n">y_sc</span><span class="p">,</span>
-                                        <span class="s1">&#39;column&#39;</span><span class="p">:</span> <span class="n">x_sc</span><span class="p">},</span>
+                                        <span class="s1">&#39;row&#39;</span><span class="p">:</span> <span class="n">x_sc</span><span class="p">,</span>
+                                        <span class="s1">&#39;column&#39;</span><span class="p">:</span> <span class="n">y_sc</span><span class="p">},</span>
                               <span class="n">interactions</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;click&#39;</span><span class="p">:</span> <span class="s1">&#39;select&#39;</span><span class="p">},</span>
                               <span class="n">anchor_style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;fill&#39;</span><span class="p">:</span><span class="s1">&#39;yellow&#39;</span><span class="p">},</span> 
                               <span class="n">selected_style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;opacity&#39;</span><span class="p">:</span> <span class="mf">1.0</span><span class="p">},</span>
@@ -13575,8 +13613,8 @@ These visualizations focus on the relationship between serum cholesterol in mg/d
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># HIDDEN</span>
-<span class="n">nage</span> <span class="o">=</span> <span class="mi">41</span>
-<span class="n">ntrestbps</span> <span class="o">=</span> <span class="mi">49</span>
+<span class="n">nage</span> <span class="o">=</span> <span class="mi">56</span>
+<span class="n">ntrestbps</span> <span class="o">=</span> <span class="mi">50</span>
 <span class="n">hist2d</span><span class="p">,</span> <span class="n">age_edges</span><span class="p">,</span> <span class="n">oldpeak_edges</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">histogram2d</span><span class="p">(</span><span class="n">heart</span><span class="p">[</span><span class="s1">&#39;age&#39;</span><span class="p">],</span> 
                                                    <span class="n">heart</span><span class="p">[</span><span class="s1">&#39;oldpeak&#39;</span><span class="p">],</span> 
                                                    <span class="n">weights</span> <span class="o">=</span> <span class="n">heart</span><span class="p">[</span><span class="s1">&#39;restecg&#39;</span><span class="p">],</span>
@@ -13608,10 +13646,10 @@ These visualizations focus on the relationship between serum cholesterol in mg/d
 <span class="n">c_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">ColorAxis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">col_sc</span><span class="p">,</span> 
                         <span class="n">orientation</span> <span class="o">=</span> <span class="s1">&#39;vertical&#39;</span><span class="p">,</span> 
                         <span class="n">side</span> <span class="o">=</span> <span class="s1">&#39;right&#39;</span><span class="p">)</span>
-<span class="n">x_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">Axis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">x_sc</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="s1">&#39;ST depression induced by exercise relative to rest&#39;</span><span class="p">)</span>
+<span class="n">x_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">Axis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">x_sc</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="s1">&#39;Age&#39;</span><span class="p">)</span>
 <span class="n">y_ax</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">Axis</span><span class="p">(</span><span class="n">scale</span> <span class="o">=</span> <span class="n">y_sc</span><span class="p">,</span> 
                    <span class="n">orientation</span> <span class="o">=</span> <span class="s1">&#39;vertical&#39;</span><span class="p">,</span> 
-                   <span class="n">label</span> <span class="o">=</span> <span class="s1">&#39;Age&#39;</span><span class="p">)</span>
+                   <span class="n">label</span> <span class="o">=</span> <span class="s1">&#39;ST depression induced by exercise relative to rest&#39;</span><span class="p">)</span>
 
 <span class="n">heat_map</span> <span class="o">=</span> <span class="n">bqplot</span><span class="o">.</span><span class="n">GridHeatMap</span><span class="p">(</span><span class="n">color</span> <span class="o">=</span> <span class="n">hist2d</span><span class="p">,</span>
                               <span class="n">row</span> <span class="o">=</span> <span class="n">age_edges</span><span class="p">,</span>
@@ -13619,8 +13657,8 @@ These visualizations focus on the relationship between serum cholesterol in mg/d
                               <span class="n">column</span> <span class="o">=</span> <span class="n">oldpeak_edges</span><span class="p">,</span>
                               <span class="c1">#trestbps_centers,</span>
                               <span class="n">scales</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;color&#39;</span><span class="p">:</span> <span class="n">col_sc</span><span class="p">,</span>
-                                        <span class="s1">&#39;row&#39;</span><span class="p">:</span> <span class="n">y_sc</span><span class="p">,</span>
-                                        <span class="s1">&#39;column&#39;</span><span class="p">:</span> <span class="n">x_sc</span><span class="p">},</span>
+                                        <span class="s1">&#39;row&#39;</span><span class="p">:</span> <span class="n">x_sc</span><span class="p">,</span>
+                                        <span class="s1">&#39;column&#39;</span><span class="p">:</span> <span class="n">y_sc</span><span class="p">},</span>
                               <span class="n">interactions</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;click&#39;</span><span class="p">:</span> <span class="s1">&#39;select&#39;</span><span class="p">},</span>
                               <span class="n">anchor_style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;fill&#39;</span><span class="p">:</span><span class="s1">&#39;yellow&#39;</span><span class="p">},</span> 
                               <span class="n">selected_style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;opacity&#39;</span><span class="p">:</span> <span class="mf">1.0</span><span class="p">},</span>
@@ -13655,7 +13693,7 @@ These visualizations focus on the relationship between serum cholesterol in mg/d
 
 
     
-<span class="n">heat_map</span><span class="o">.</span><span class="n">observe</span><span class="p">(</span><span class="n">get_data_value</span><span class="p">,</span> <span class="s1">&#39;selected&#39;</span><span class="p">)</span>
+<span class="c1">#heat_map.observe(get_data_value, &#39;selected&#39;)</span>
 <span class="n">ipywidgets</span><span class="o">.</span><span class="n">VBox</span><span class="p">([</span><span class="n">mySelectedLabel</span><span class="p">,</span> <span class="n">ipywidgets</span><span class="o">.</span><span class="n">HBox</span><span class="p">([</span><span class="n">fig</span><span class="p">,</span><span class="n">fig_thal</span><span class="p">])])</span>
 <span class="c1"># ipywidgets.VBox([mySelectedLabel, ipywidgets.HBox([fig])])</span>
 </pre></div>
