--- a/ProjectFinal.html
+++ b/ProjectFinal.html
@@ -13427,7 +13427,7 @@ health disease to some degree.</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ca5e7fe80&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42e9aefcc0&gt;</pre>
 </div>
 
 </div>
@@ -13452,11 +13452,11 @@ health disease to some degree.</p>
   </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="More-exploration-about-Age-&amp;-Resting-blood-pressure">More exploration about Age &amp; Resting blood pressure<a class="anchor-link" href="#More-exploration-about-Age-&amp;-Resting-blood-pressure">&#182;</a></h1><p>In the “Age &amp; Resting blood pressure” heatmap with scatter plot, instances with different age and Resting blood pressure level are shown in the heatmap. When the instance with a certain age and Resting blood pressure level is chosen, the number of people who have exercise-induced angina in this dataset is shown above. Additionally, the scatter plot, which is linked with the heatmap, demonstrates the maximum heart rate of this certain instance can achieve and the serum cholesterol level.
-Age &amp; Resting blood pressure=&gt; Maximum heart achieved &amp; Resting blood pressure
+<h1 id="More-exploration-about-Age-&amp;-Serum-cholestoral-level">More exploration about Age &amp; Serum cholestoral level<a class="anchor-link" href="#More-exploration-about-Age-&amp;-Serum-cholestoral-level">&#182;</a></h1><p>In the “Age &amp; Serum cholestoral level” heatmap with scatter plot, instances with different age and Serum cholestoral level are shown in the heatmap. When the instance with a certain age and Serum cholestoral level is chosen, the number of people who have heart disease under this age is shown above. Additionally, the scatter plot, which is linked with the heatmap, demonstrates the maximum heart rate of this certain instance can achieve and the serum cholesterol level.
+Age &amp; Serum cholestoral level=&gt; Maximum heart achieved &amp; Serum cholestoral level
 These visualizations focus on people who have exercise-induced angina in certain age and
-Resting blood pressure level, while it also illustrates the relationship between the maximum heart
-rate and Resting blood pressure to help understand their correlations to the heart disease.</p>
+Serum cholestoral level, while it also illustrates the relationship between the maximum heart
+rate and Serum cholestoral level to help understand their correlations to the heart disease.</p>
 
 </div>
 </div>
@@ -13596,7 +13596,7 @@ rate and Resting blood pressure to help understand their correlations to the hea
   </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Explanation-of-Age-&amp;-ST-depression">Explanation of Age &amp; ST depression<a class="anchor-link" href="#Explanation-of-Age-&amp;-ST-depression">&#182;</a></h1><p>In the “Age &amp; ST depression” heatmap with scatter plot, instances with different age and ST depression level are shown in the heatmap. When the instance with certain age and ST depression level is chosen, the number of people who have exercise-induced angina in this dataset is shown above. Additionally, the scatter plot, which is linked with the heatmap, demonstrates the maximum heart rate of this certain instance can achieve and the serum cholesterol amount.
+<h1 id="Explanation-of-Age-&amp;-ST-depression">Explanation of Age &amp; ST depression<a class="anchor-link" href="#Explanation-of-Age-&amp;-ST-depression">&#182;</a></h1><p>In the “Age &amp; ST depression” heatmap with scatter plot, instances with different age and ST depression level are shown in the heatmap. When the instance with certain age and ST depression level is chosen, the number of people who have heart disease in this dataset is shown above. Additionally, the scatter plot, which is linked with the heatmap, demonstrates the maximum heart rate of this certain instance can achieve and the serum cholesterol amount.
 Age &amp; ST depression=&gt; Chol &amp; ST depression
 These visualizations focus on the relationship between serum cholesterol in mg/dl and ST depression which is induced by exercise relative to rest. This relationship helps to understand the correlations among exercise, rest, trace and heart disease.</p>
 
