--- a/ProjectFinal.html
+++ b/ProjectFinal.html
@@ -13213,26 +13213,6 @@ Reference:<a href="http://legacy.earlham.edu/~peters/fos/overview.htm">http://le
 
   
 
-  <div class="
-      cell border-box-sizing code_cell rendered">
-    <div class="input">
-
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="ch">#!pip install sklearn</span>
-<span class="c1">#!pip install matplotlib</span>
-<span class="c1">#!pip install seaborn</span>
-<span class="c1">#!pip install xlrd</span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-  </div>
-
-  
-
   <div class="nbinteract-hide_in
       cell border-box-sizing code_cell rendered">
     <div class="input">
@@ -13427,7 +13407,7 @@ health disease to some degree.</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42e9aefcc0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97b2016080&gt;</pre>
 </div>
 
 </div>
