--- a/ProjectFinal.html
+++ b/ProjectFinal.html
@@ -13220,6 +13220,27 @@ Reference:<a href="http://legacy.earlham.edu/~peters/fos/overview.htm">http://le
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># HIDDEN</span>
+<span class="c1">#!pip install sklearn</span>
+<span class="c1">#!pip install seaborn</span>
+<span class="c1">#!pip install matplotlib</span>
+<span class="c1">#!pip install xlrd</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+  </div>
+
+  
+
+  <div class="nbinteract-hide_in
+      cell border-box-sizing code_cell rendered">
+    <div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># HIDDEN</span>
 <span class="kn">import</span> <span class="nn">IPython.core.display</span> <span class="k">as</span> <span class="nn">di</span>
 
 <span class="c1"># This line will hide code by default when the notebook is exported as HTML</span>
@@ -13407,7 +13428,7 @@ health disease to some degree.</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97b2016080&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ffb0fd8d0&gt;</pre>
 </div>
 
 </div>
@@ -14012,9 +14033,9 @@ These visualizations focus on the relationship between serum cholesterol in mg/d
   </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Conclusion&#65306;">Conclusion&#65306;<a class="anchor-link" href="#Conclusion&#65306;">&#182;</a></h1><p>In this article, we mainly focus on doing analysis on the relationship among age, resting blood pressure, maximum heart rate and the ST depression induced by exercise relative to rest. The reason we mainly focus on analyzing these attribute is since their correlation value is higher than other groups.
-According to our current analysis, we think that people who have are under 50 years old with high resting blood pressure may increase the opportunity to have cardiovascular events. In addition, people who are under 50 years old with high serum cholesterol level especially people who have exercise-induced angina, it has higher possibility to have cardiovascular events than others. Finally, we people who have a higher level of ST depression will have relatively high possible to have cardiovascular events than others.
-Therefore, young people especially who have a high level of resting blood pressure,  serum cholesterol and ST depression should be more careful to supervise themselves in case of having cardiovascular events.</p>
+<h1 id="Conclusion&#65306;">Conclusion&#65306;<a class="anchor-link" href="#Conclusion&#65306;">&#182;</a></h1><p>In this article, we mainly focus on doing analysis on the relationship among age, serum cholesterol level, maximum heart rate, resting blood pressure and the ST depression induced by exercise relative to rest. The reason we mainly focus on analyzing these attribute is since they are commonly believed to be closely related to the heart disease.
+According to our current analysis, we can see that people are above 50 years old with high maximum heart rate and low ST depression may increase the opportunity to have cardiovascular events. In addition, serum cholesterol level and ST depression may not be the main cause for younger people who are under 50 years old whether he/she has exercise-induced angina or not, which is different from what people commonly believe.
+Besides, young people especially who have a high level of resting blood pressure should be more careful to supervise themselves in case of having cardiovascular events since most people in their condition are tend to suffer from those diseases.</p>
 
 </div>
 </div>
